corrected Info and Warning style for better experience of user. That eliminates jumping of elements on page when Info or Warning apears

--- a/view/src/component/stateless/ToastBar/Info/Info.module.css
+++ b/view/src/component/stateless/ToastBar/Info/Info.module.css
@@ -1,6 +1,9 @@
 .Info {
     background-color: rgb(252, 250, 238);
-    width: fit-content;
+    position: fixed;
+    top: 60px;
+    right: 1px;
+    left: 1px;
     text-align: center;
     font-size: 16px;
     color: rgb(189, 123, 0);
